# anime-flv-api

./: Cargo.toml
.idx/: dev.nix
src/: anime.rs  anime_episode.rs  macro_rules.rs  main.rs
