[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["blocking"] }
scraper = "0.19.1"

[build]
rustflags = ["-Z", "unstable-options"]
